Translating some PT to EN, Fixing links and Removing unnecessary js

--- a/src/html/pages/distributor/edit-profile.html
+++ b/src/html/pages/distributor/edit-profile.html
@@ -41,7 +41,7 @@
                         </div>
                         <div class="col-md-4">
                             <label class="control-label">Document</label>
-                            <input class="form-control" type="text" placeholder="Your CPF/CNPJ" />
+                            <input class="form-control" type="text" placeholder="xx.xxx.xxx/xxxx-xx" />
                         </div>
                     </div>
                 </div>
@@ -79,7 +79,7 @@
                         <div class="col-md-4">
                             <select class="form-control">
                                 <option>Country</option>
-                                <option value="BR">Brasil</option>
+                                <option value="BR">Brazil</option>
                                 <option value="CH">Chile</option>
                             </select>
                         </div>
@@ -98,12 +98,12 @@
 <!-- FOOTER -->
 <div class='footer fixed'>
     <div class='pull-right'>
-        <span class='text-muted' style='margin-right: 20px;'>Dúvidas</span>
-        <span class='text-muted' style='margin-right: 20px;'>Feedback</span>
-        <span class='text-muted'>Contato</span>
+        <a href="#" class='text-muted' style='margin-right: 20px;'>Questions</a>
+        <a class="btn btn-default btn-feeds" href="#" role="button" style="margin-right: 20px;">Feedback</a>
+        <a href="#" class='text-muted'>Contact</a>
     </div>
     <div>
-        <span class='text-muted'>Copyright © 2015 Zertico</span>
+        <span class='text-muted'>Copyright © 2015 Foo Inc.</span>
     </div>
 </div>
 
