--- a/src/html/pages/reseller/settings.html
+++ b/src/html/pages/reseller/settings.html
@@ -41,7 +41,7 @@
         <div class="comp-s-item border-bottom clearfix">
             <div class='col-lg-4'>
                 <h4>Company Information</h4>
-                <small>You have a list with all data of the company. A full and practice overview.</small>
+                <small>You have a list with all company's data. A full and practice overview.</small>
             </div>
             <div class="col-lg-8 summary">
                 <div class="summary-group clearfix">
@@ -232,8 +232,8 @@
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td>wwww.zertico.com</td>
-                                    <td>ns1.zertico.com</td>
+                                    <td>wwww.foo.com</td>
+                                    <td>ns1.foo.com</td>
                                 </tr>
                             </tbody>
                         </table>
@@ -246,12 +246,12 @@
 <!-- FOOTER -->
 <div class='footer fixed'>
     <div class='pull-right'>
-        <span class='text-muted' style='margin-right: 20px;'>Dúvidas</span>
-        <a class="btn btn-default" href="#" role="button" style="margin-right: 20px;">Feedback</a>
-        <span class='text-muted'>Contato</span>
+        <a href="#" class='text-muted' style='margin-right: 20px;'>Questions</a>
+        <a class="btn btn-default btn-feeds" href="#" role="button" style="margin-right: 20px;">Feedback</a>
+        <a href="#" class='text-muted'>Contact</a>
     </div>
     <div>
-        <span class='text-muted'>Copyright © 2015 Zertico</span>
+        <span class='text-muted'>Copyright © 2015 Foo Inc.</span>
     </div>
 </div>
 {% endblock %} {% block javascript %} {% endblock %}
