--- a/src/html/pages/reseller/show-category.html
+++ b/src/html/pages/reseller/show-category.html
@@ -143,7 +143,7 @@
                                 Servers
                                 <span>High Performance Server in a Class A Datacenter</span>
                             </h3>
-                            <a href="http://foo.localhost:3004/br/shop/servers" class="btn btn-default">Veja as Opções</a>
+                            <a href="#" class="btn btn-default">More Options</a>
                         </div>
                     </div>
                 </div>
@@ -154,12 +154,12 @@
 <!-- FOOTER -->
 <div class='footer fixed'>
     <div class='pull-right mini-menu'>
-        <a href="#" class='text-muted' style='margin-right: 20px;'>Dúvidas</a>
+        <a href="#" class='text-muted' style='margin-right: 20px;'>Questions</a>
         <a class="btn btn-default btn-feeds" href="#" role="button" style="margin-right: 20px;">Feedback</a>
-        <a href="#" class='text-muted'>Contato</a>
+        <a href="#" class='text-muted'>Contact</a>
     </div>
     <div class="copys pull-left">
-        <span class='text-muted'>Copyright © 2015 Zertico</span>
+        <span class='text-muted'>Copyright © 2015 Foo Inc.</span>
     </div>
 </div>
 {% endblock %} {% block javascript %} {% endblock %}
