--- a/src/html/pages/shop/cart-login.html
+++ b/src/html/pages/shop/cart-login.html
@@ -82,7 +82,7 @@
                     </div>
                     
                     <div class="col-md-12 mb_0 mt_20">
-                        <input type="submit" class="btn btn-primary no_margin" value="Sign Up" name="commit">
+                        <input type="submit" class="btn btn-primary no_margin" value="Sign Up">
                     </div>
                 </form>
             </div>
