--- a/src/html/pages/shop/cart-released.html
+++ b/src/html/pages/shop/cart-released.html
@@ -54,7 +54,7 @@
                         <i class="fa fa-thumbs-o-up"></i>
                       </a>
                     </div>
-                    <h3>Approved Payment</h3>
+                    <h3>Payment Approved</h3>
                     <p>
                       Your payment was approved. Check your invoice 
                       <a href="#"> here</a>
