--- a/src/html/pages/shop/categories.html
+++ b/src/html/pages/shop/categories.html
@@ -2,7 +2,7 @@
 <div id="page-menu">
     <div class="container clearfix">
         <div class="menu_page_title">
-            Products <span>Zertico</span>
+            Products <span>Foo Inc.</span>
         </div>
         <nav class="mini-nav">
             <ul>
@@ -47,7 +47,7 @@
                           Servers
                         </h3>
                         <span>High Performance Server in a Class A Datacenter</span>
-                        <a href="shop-groups.html" class="btn btn-primary">More options</a>
+                        <a href="groups.html" class="btn btn-primary">More options</a>
                     </div>
                 </div>
             </div>
