--- a/src/html/pages/shop/plans.html
+++ b/src/html/pages/shop/plans.html
@@ -6,7 +6,7 @@
   <div class="container clearfix">
     <div class="menu_page_title">
       Products
-      <span>Zertico</span>
+      <span>Foo Inc.</span>
     </div>
     <nav>
       <ul>
@@ -87,7 +87,7 @@
               <br>
               R$ 224,93
             </p>
-            <a href="plans-customize.html" class="btn btn-primary">Adicionar ao Carrinho</a>
+            <a href="plans-customize.html" class="btn btn-primary">Add to Cart</a>
           </div>
         </div>
       </div>
@@ -127,7 +127,7 @@
               <br>
               R$ 449,86
             </p>
-            <a href="plans-customize.html" class="btn btn-primary">Adicionar ao Carrinho</a>
+            <a href="plans-customize.html" class="btn btn-primary">Add to Cart</a>
           </div>
         </div>
       </div>
