--- a/src/html/parts/header.html
+++ b/src/html/parts/header.html
@@ -6,8 +6,8 @@
             </a>
             <ul class="list-inline navbar-right main-nav">
                 <li class="dropdown">
-                    <a href="#">Products and Services</a>
-                    <ul style="display: none;">
+                    <a href="#" data-toggle="dropdown">Products and Services</a>
+                    <ul  class="dropdown-menu" style="display: none;">
                         <li>
                             <a href="#">Dedicated Servers</a>
                         </li>
@@ -28,11 +28,11 @@
                         </li>
                     </ul>
                 </li>
-                <li class="sub-menu">
-                    <a href="#" class="sf-with-ul">Solutions</a>
+                <li>
+                    <a href="#">Solutions</a>
                 </li>
-                <li class="sub-menu">
-                    <a href="#" class="sf-with-ul">Program</a>
+                <li>
+                    <a href="#">Program</a>
                 </li>
                 <li>
                     <a href="#">Blog</a>
@@ -41,7 +41,7 @@
                     <a href="#">About Us</a>
                 </li>
                 <li>
-                    <a class="login" href="/br/login" class="button-logins">Login</a>
+                    <a class="login" class="button-logins">Login</a>
                 </li>
                 <li class="shopping-cart">
                     <a href="#">
