--- a/src/html/parts/page-nav.html
+++ b/src/html/parts/page-nav.html
@@ -2,13 +2,13 @@
   <li class='nav-header'>
       Logo
   </li>
-  <li>
-    <a href='#'>
+  <li class="panel">
+    <a href='#' data-toggle="collapse" data-target="#collapse-1" data-parent="#side-menu">
       <i class='fa fa-user'></i>
       <span class='nav-label'>Distributor</span>
       <i class='fa fa fa-angle-left'></i>
     </a>
-    <ul class='nav nav-second-level collapse'>
+    <ul id="collapse-1" class='nav nav-second-level collapse'>
       <li>
         <a href='../distributor/edit-profile.html'>Edit Profile</a>
       </li>
@@ -17,13 +17,13 @@
       </li>
     </ul>
   </li>
-  <li>
-    <a href='#'>
+  <li class="panel">
+    <a href='#' data-toggle="collapse" data-target="#collapse-2" data-parent="#side-menu">
       <i class='fa fa-user'></i>
       <span class='nav-label'>Reseller</span>
       <i class='fa fa fa-angle-left'></i>
     </a>
-    <ul class='nav nav-second-level collapse'>
+    <ul id="collapse-2" class='nav nav-second-level collapse'>
       <li>
         <a href='../reseller/companies.html'>Listing Companies</a>
       </li>
@@ -65,13 +65,13 @@
       </li>
     </ul>
   </li>
-  <li>
-      <a href='#'>
+  <li class="panel">
+      <a href='#' data-toggle="collapse" data-target="#collapse-2" data-parent="#side-menu">
           <i class='fa fa-shopping-cart'></i>
           <span class='nav-label'>Store</span>
           <i class='fa fa fa-angle-left'></i>
       </a>
-      <ul class='nav nav-second-level collapse'>
+      <ul id="collapse-3" class='nav nav-second-level collapse'>
           <li>
               <a href='../shop/categories.html'>Categories</a>
           </li>
