--- a/src/html/pages/reseller/new-client.html
+++ b/src/html/pages/reseller/new-client.html
@@ -86,7 +86,7 @@
                         <div class="col-md-4">
                             <select class="form-control">
                                 <option>Country</option>
-                                <option value="BR">Brasil</option>
+                                <option value="BR">BrazSSil</option>
                                 <option value="CH">Chile</option>
                             </select>
                         </div>
@@ -216,12 +216,12 @@
 <!-- FOOTER -->
 <div class='footer fixed'>
     <div class='pull-right'>
-        <span class='text-muted' style='margin-right: 20px;'>Dúvidas</span>
-        <span class='text-muted' style='margin-right: 20px;'>Feedback</span>
-        <span class='text-muted'>Contato</span>
+        <a href="#" class='text-muted' style='margin-right: 20px;'>Questions</a>
+        <a class="btn btn-default btn-feeds" href="#" role="button" style="margin-right: 20px;">Feedback</a>
+        <a href="#" class='text-muted'>Contact</a>
     </div>
     <div>
-        <span class='text-muted'>Copyright © 2015 Zertico</span>
+        <span class='text-muted'>Copyright © 2015 Foo Inc.</span>
     </div>
 </div>
 
