--- a/src/html/pages/reseller/new-plan.html
+++ b/src/html/pages/reseller/new-plan.html
@@ -56,12 +56,12 @@
 <!-- FOOTER -->
 <div class='footer fixed'>
     <div class='pull-right'>
-        <span class='text-muted' style='margin-right: 20px;'>Dúvidas</span>
-        <span class='text-muted' style='margin-right: 20px;'>Feedback</span>
-        <span class='text-muted'>Contato</span>
+        <a href="#" class='text-muted' style='margin-right: 20px;'>Questions</a>
+        <a class="btn btn-default btn-feeds" href="#" role="button" style="margin-right: 20px;">Feedback</a>
+        <a href="#" class='text-muted'>Contact</a>
     </div>
     <div>
-        <span class='text-muted'>Copyright © 2015 Zertico</span>
+        <span class='text-muted'>Copyright © 2015 Foo Inc./span>
     </div>
 </div>
 {% endblock %} {% block javascript %} {% endblock %}
