--- a/src/html/pages/reseller/show-group.html
+++ b/src/html/pages/reseller/show-group.html
@@ -160,12 +160,12 @@
 <!-- FOOTER -->
 <div class='footer fixed'>
     <div class='pull-right mini-menu'>
-        <a href="#" class='text-muted' style='margin-right: 20px;'>Dúvidas</a>
+        <a href="#" class='text-muted' style='margin-right: 20px;'>Doubts</a>
         <a class="btn btn-default btn-feeds" href="#" role="button" style="margin-right: 20px;">Feedback</a>
-        <a href="#" class='text-muted'>Contato</a>
+        <a href="#" class='text-muted'>Contact</a>
     </div>
     <div class="copys pull-left">
-        <span class='text-muted'>Copyright © 2015 Zertico</span>
+        <span class='text-muted'>Copyright © 2015 Foo Inc.</span>
     </div>
 </div>
 {% endblock %} {% block javascript %} {% endblock %}
