Fixing block contents declarations

--- a/src/html/pages/distributor/edit-profile.html
+++ b/src/html/pages/distributor/edit-profile.html
@@ -1,6 +1,5 @@
-{% extends 'layouts/admin.html' %}
+{% extends 'layouts/admin.html' %} {% block content %}
 
-{% block content %}
 <div class='row wrapper'>
     <div class='col-lg-10'>
         <h3>Accounts</h3>
@@ -107,6 +106,4 @@
     </div>
 </div>
 
-{% endblock %}
-{% block javascript %}
-{% endblock %}
+{% endblock %} {% block javascript %} {% endblock %}
