--- a/src/html/pages/reseller/login.html
+++ b/src/html/pages/reseller/login.html
@@ -4,9 +4,7 @@
   Docs: https://mozilla.github.io/nunjucks/api.html
 #}
 
-{% extends 'layouts/login.html' %}
-
-{% block content %}
+{% extends 'layouts/login.html' %} {% block content %}
 <div class="container">
     <div id="loginbox" style="margin-top:150px;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
         <div class="title">
@@ -47,7 +45,4 @@
     </div>
 </div>
 
-{% endblock %}
-
-{% block javascript %}
-{% endblock %}
+{% endblock %} {% block javascript %} {% endblock %}
