--- a/src/html/pages/reseller/new-client.html
+++ b/src/html/pages/reseller/new-client.html
@@ -225,6 +225,4 @@
     </div>
 </div>
 
-{% endblock %} 
-{% block javascript %} 
-{% endblock %}
+{% endblock %} {% block javascript %} {% endblock %}
