--- a/src/html/pages/shop/cart-register.html
+++ b/src/html/pages/shop/cart-register.html
@@ -1,6 +1,4 @@
-{% extends 'layouts/shop.html' %}
-
-{% block content %}
+{% extends 'layouts/shop.html' %} {% block content %}
 
 <section class="page_title page_title_mini">
     <div class="container clearfix">
