--- a/src/html/pages/shop/plans.html
+++ b/src/html/pages/shop/plans.html
@@ -298,7 +298,4 @@
     </div>
   </div>
 </section>
-{% endblock %}
-
-{% block javascript %}
-{% endblock %}
+{% endblock %} {% block javascript %} {% endblock %}
