--- a/src/html/pages/distributor/new-company.html
+++ b/src/html/pages/distributor/new-company.html
@@ -212,6 +212,4 @@
     </div>
 </div>
 
-{% endblock %} 
-{% block javascript %} 
-{% endblock %}
+{% endblock %} {% block javascript %} {% endblock %}
