--- a/src/html/pages/shop/cart-payment.html
+++ b/src/html/pages/shop/cart-payment.html
@@ -192,7 +192,7 @@
             </div>
             <div class='row mt_40'>
                 <div class='col-md-2'>
-                    <a class='btn btn-primary' href='#'>Confirm</a>
+                    <a class='btn btn-primary' href='cart-released.html'>Confirm</a>
                 </div>
             </div>
         </div>
