--- a/src/html/pages/shop/cart-released.html
+++ b/src/html/pages/shop/cart-released.html
@@ -1,6 +1,4 @@
-{% extends 'layouts/shop.html' %} 
-
-{% block content %}
+{% extends 'layouts/shop.html' %} {% block content %}
 <section class="page_title page_title_mini">
     <div class="container clearfix">
         <h2>Product Released</h2>
@@ -85,4 +83,5 @@
       </div>
     </div>
 </section>
+
 {% endblock %} {% block javascript %} {% endblock %}
