--- a/src/html/pages/shop/groups.html
+++ b/src/html/pages/shop/groups.html
@@ -1,6 +1,4 @@
-{% extends 'layouts/shop.html' %}
-
-{% block content %}
+{% extends 'layouts/shop.html' %} {% block content %}
 
 <div id="page-menu">
         <div class="container clearfix">
@@ -77,7 +75,4 @@
         </div>
       </section>
 
-{% endblock %}
-
-{% block javascript %}
-{% endblock %}
+{% endblock %} {% block javascript %} {% endblock %}
