A few improvements to all theme

--- a/src/html/pages/reseller/settings.html
+++ b/src/html/pages/reseller/settings.html
@@ -216,29 +216,25 @@
                 <small>Click in new domain to choose a new domain for the company. <a href="../docs/documentation.html">Learn more about it</a></small>
             </div>
 
-            <div class="col-lg-8">
-                <div>
-                    <h5>Custom Domains</h5>
-                    <div class="pull-right">
-                        <button class="btn btn-default">New Domain</button>
-                    </div>
-                    <div class="table-responsive">
-                        <table class="table table-striped">
-                            <thead>
-                                <tr>
-                                    <th>Domain name</th>
-                                    <th>DNS Target</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>wwww.foo.com</td>
-                                    <td>ns1.foo.com</td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
+            <div class="col-lg-8 summary">
+                <h5>Custom Domains</h5>
+                <div class="pull-right">
+                    <button class="btn btn-default">New Domain</button>
                 </div>
+                <table class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th>Domain name</th>
+                            <th>DNS Target</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>wwww.foo.com</td>
+                            <td>ns1.foo.com</td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
