--- a/src/html/pages/shop/categories.html
+++ b/src/html/pages/shop/categories.html
@@ -88,7 +88,7 @@
                     <span>We will be glad to assist you in case you have any questions, click and contact us</span>
                 </div>
                 <div class="col-lg-2">
-                    <a class="promo_button">Contato</a>
+                    <a class="promo_button">Contact</a>
                 </div>
             </div>
         </div>
