--- a/src/html/pages/shop/groups.html
+++ b/src/html/pages/shop/groups.html
@@ -69,7 +69,7 @@
                 Can we help you?
               </h3>
               <span>We will be glad to assist you in case you have any questions, click and contact us</span>
-              <a class="promo_button">Contato</a>
+              <a class="promo_button">Contact</a>
             </div>
           </div>
         </div>
