--- a/src/html/parts/page-nav.html
+++ b/src/html/parts/page-nav.html
@@ -15,6 +15,9 @@
       <li>
         <a href='../distributor/new-company.html'>New Company</a>
       </li>
+      <li>
+        <a href='../distributor/company-settings.html'>Company Settings</a>
+      </li>
     </ul>
   </li>
   <li class="panel">
@@ -24,6 +27,9 @@
       <i class='fa fa fa-angle-left'></i>
     </a>
     <ul id="collapse-2" class='nav nav-second-level collapse'>
+      <li>
+        <a href='../reseller/edit-profile.html'>Edit Profile</a>
+      </li>
       <li>
         <a href='../reseller/companies.html'>Listing Companies</a>
       </li>
@@ -66,7 +72,7 @@
     </ul>
   </li>
   <li class="panel">
-      <a href='#' data-toggle="collapse" data-target="#collapse-2" data-parent="#side-menu">
+      <a href='#' data-toggle="collapse" data-target="#collapse-3" data-parent="#side-menu">
           <i class='fa fa-shopping-cart'></i>
           <span class='nav-label'>Store</span>
           <i class='fa fa fa-angle-left'></i>
@@ -102,7 +108,7 @@
       </ul>
   </li>
   <li>
-    <a href='../docs/documentation/.html'>
+    <a href='../docs/documentation.html'>
 		<i class='fa fa-book'></i>
 		<span class='nav-label'>Docs</span>
     </a>
