--- a/src/html/pages/shop/cart.html
+++ b/src/html/pages/shop/cart.html
@@ -95,7 +95,7 @@
                                             <input type="text" class="form-control">
                                         </div>
                                         <div class="col-md-4 col-xs-5">
-                                            <a href="#" class="btn btn-default">Apply Cupom</a>
+                                            <a href="#" class="btn btn-primary">Apply Cupom</a>
                                         </div>
                                     </div>
                                     <div class="col-md-5 col-xs-8">
