--- a/src/html/parts/navbar-top.html
+++ b/src/html/parts/navbar-top.html
@@ -121,7 +121,7 @@
                   <b class="caret"></b>
                 </span>
                 </a>
-                <ul class="dropdown-menu animated fadeInTop">
+                <ul class="dropdown-menu animated fadeInDown">
                     <li>
                         <a href="#">Profile</a>
                     </li>
