Deleting unused javascripts, updating documentation, and creating descriptions form new pages on distributor

--- a/src/html/pages/distributor/company-settings.html
+++ b/src/html/pages/distributor/company-settings.html
@@ -58,7 +58,7 @@
     <div id="info" class="comp-s-item border-bottom clearfix">
       <div class="col-lg-4">
         <h4>Company Information</h4>
-        <small>All the information about the company will be displayed on this page.</small>
+        <small>All the information about the company will be displayed on this page. <a href="../docs/documentation.html">More info</a></small>
       </div>
       <div class="col-lg-8 summary">
         <div class="summary-group clearfix">
@@ -77,8 +77,7 @@
     <div class="comp-s-item border-bottom clearfix">
       <div class="col-lg-4">
         <h4>Manage Theme</h4>
-        <small>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-          <a href="#">Aenean ac magna ipsum.</a>
+          <small>You have a list with all themes available for this company. <a href="../docs/documentation.html">More info</a></small>
         </small>
       </div>
       <div class="col-lg-8 summary">
@@ -113,9 +112,7 @@
     <div class="comp-s-item border-bottom clearfix">
       <div class="col-lg-4">
         <h4>Domains</h4>
-        <small>Consectetur adipiscing. Lorem ipsum dolor sit amet elit. 
-          <a href="#">Aenean ac magna.</a>
-        </small>
+        <small>Set the domain for this company. <a href="../docs/documentation.html">More info</a></small>
       </div>
       <div class="col-lg-8 summary">
         <h5>Custom Domains</h5>
