--- a/src/html/pages/distributor/new-company.html
+++ b/src/html/pages/distributor/new-company.html
@@ -22,6 +22,21 @@
         <div class='col-lg-8'>
             <h4>New Reseller</h4>
             <form class="simple_form form-horizontal">
+                <div class="col-md-3 col-md-offset-4">
+                    <label class="radio">
+                        <a class="tips" href="#" data-toggle="tooltip" title="On the system, you can choose a person instead of a coorporation, and you'll be given other fiedls such as name and nickname">
+                        <input type="radio" value="person" name="group_org" class="custom-radio">
+                        <span style="padding-left: 5px;">Person</span>
+                        </a>
+                    </label>
+                </div>
+                <div class="col-md-3">
+                    <label class="radio">
+                        <input type="radio" value="corporation" name="group_org" class="custom-radio" checked="checked"
+                      >
+                        <span style="padding-left: 5px;">Corporation</span>
+                    </label>
+              </div>
                 <div class="col-md-12">
                     <h5>Personal Information</h5>
                     <div class="form-group">
