--- a/src/html/pages/reseller/settings.html
+++ b/src/html/pages/reseller/settings.html
@@ -183,7 +183,7 @@
         <div class="comp-s-item border-bottom clearfix">
             <div class='col-lg-4'>
                 <h4>Manage Theme</h4>
-                <small>You can manage the themes of your system here. You have a list with all themes you have available, and choose the one your prefer with just one click. <a href="../docs/documentation.html">Learn more about it</a></small>
+                <small>You can manage the themes of your system here. You have a list with all themes you have available, and choose the one your prefer with just one click. <a href="../docs/documentation.html">More info</a></small>
             </div>
 
             <div class="col-lg-8 summary">
@@ -213,7 +213,7 @@
         <div class="comp-s-item border-bottom clearfix">
             <div class='col-lg-4'>
                 <h4>Domains</h4>
-                <small>Click in new domain to choose a new domain for the company. <a href="../docs/documentation.html">Learn more about it</a></small>
+                <small>Click in new domain to choose a new domain for the company. <a href="../docs/documentation.html">More info</a></small>
             </div>
 
             <div class="col-lg-8 summary">
