--- a/src/html/pages/reseller/new-client.html
+++ b/src/html/pages/reseller/new-client.html
@@ -24,13 +24,15 @@
             <form class="form-horizontal">
                 <div class="col-md-3 col-md-offset-4">
                     <label class="radio">
+                        <a class="tips" href="#" data-toggle="tooltip" title="On the system, you can choose a person instead of a coorporation, and you'll be given other fiedls such as name and nickname">
                         <input type="radio" value="person" name="group_org" class="custom-radio">
                         <span style="padding-left: 5px;">Person</span>
+                        </a>
                     </label>
                 </div>
                 <div class="col-md-3">
                     <label class="radio">
-                        <input type="radio" value="corporation" name-"group_org" class="custom-radio" checked="checked"
+                        <input type="radio" value="corporation" name="group_org" class="custom-radio" checked="checked"
                       >
                         <span style="padding-left: 5px;">Corporation</span>
                     </label>
