Improving navigation among pages

--- a/src/html/pages/shop/cart-login.html
+++ b/src/html/pages/shop/cart-login.html
@@ -52,11 +52,15 @@
                             <input type="email" class="form-control">
                         </div>
                         <div class="col-md-12 mt_20">
-                            <label>Password;:</label>
+                            <label>Password:</label>
                             <input type="password" class="form-control">
                         </div>
                         <div class="col-md-12 mb_0 mt_20">
-                            <input type="submit" class="btn btn-primary no_margin" value="Sign In">
+                            <!--  THE SYSTEM ACTUALLY WORKS WITH THIS INPUT 
+                            <input type="submit" class="btn btn-primary no_margin" value="Sign In">-->
+
+                            <!-- THIS LINK IS JUST TO HELP NAVIGATION-->
+                            <a href="cart-payment.html" class="btn btn-primary">Sign In</a>
                             <a href="#" class="pull-right">Forgot password?</a>
                             <br>
                         </div>
@@ -82,7 +86,11 @@
                     </div>
                     
                     <div class="col-md-12 mb_0 mt_20">
-                        <input type="submit" class="btn btn-primary no_margin" value="Sign Up">
+                        <!--  THE SYSTEM ACTUALLY WORKS WITH THIS INPUT 
+                        <input type="submit" class="btn btn-primary no_margin" value="Sign Up">-->
+                        
+                        <!-- THIS LINK IS JUST TO HELP NAVIGATION-->
+                        <a href="cart-register.html" class="btn btn-primary">Sign Up</a>
                     </div>
                 </form>
             </div>
