--- a/src/html/pages/shop/cart-payment.html
+++ b/src/html/pages/shop/cart-payment.html
@@ -192,6 +192,10 @@
             </div>
             <div class='row mt_40'>
                 <div class='col-md-2'>
+                    <!--  THE SYSTEM ACTUALLY WORKS WITH THIS INPUT 
+                    <input type="submit" value="Confirm" class="btn btn-primary />
+
+                    <!-- THIS LINK IS JUSTO TO HELP NAVIGATION-->
                     <a class='btn btn-primary' href='cart-released.html'>Confirm</a>
                 </div>
             </div>
