--- a/src/html/pages/shop/plans-customize.html
+++ b/src/html/pages/shop/plans-customize.html
@@ -228,7 +228,11 @@
                     <div class="row mt_l">
                         <div class="col-md-12">
                             <div id="submit_form">
-                                <input type="submit" name="commit" value="Review Purchase" class="btn btn-primary pull-right">
+                                <!--  THE SYSTEM ACTUALLY WORKS WITH THIS INPUT
+                                <input type="submit" name="commit" value="Review Purchase" class="btn btn-primary pull-right">-->
+
+                                <!-- THIS LINK IS JUST TO HELP THE NAVIGATION ON THE THEME-->
+                                <a href="cart.html" class="btn btn-primary pull-right">Review Purchase</a>
                             </div>
                         </div>
                     </div>
