Add Reseller and End Customer Edit Own Profiles
Fixing Pages

Fixing Pages

--- a/src/html/pages/reseller/edit-profile.html
+++ b/src/html/pages/reseller/edit-profile.html
@@ -2,16 +2,16 @@
 
 <div class='row wrapper'>
     <div class='col-lg-10'>
-        <h3>Accounts</h3>
+        <h3>Profiles</h3>
         <ol class='breadcrumb'>
             <li>
                 <a href='/'>Home</a>
             </li>
             <li>
-                <a>Admin</a>
+                <a>Profiles</a>
             </li>
             <li class='active'>
-                <strong>My Account</strong>
+                <strong>My Profile</strong>
             </li>
         </ol>
     </div>
@@ -28,15 +28,15 @@
                     <div class="form-group">
                         <div class="col-md-12">
                             <label class="control-label">Corporate name</label>
-                            <input class="form-control" type="text" placeholder="Foo Inc." />
+                            <input class="form-control" type="text" placeholder="Foo Inc."/>
                         </div>
                         <div class="col-md-8">
                             <label class="control-label">Trade name</label>
-                            <input class="form-control" type="text" placeholder="Foo Inc." />
+                            <input class="form-control" type="text" placeholder="Foo Inc."/>
                         </div>
                         <div class="col-md-4">
                             <label class="control-label">Document</label>
-                            <input class="form-control" type="text" placeholder="xx.xxx.xxx/xxxx-xx" />
+                            <input class="form-control" type="text" placeholder="xx.xxx.xxx/xxxx-xx"/>
                         </div>
                     </div>
                 </div>
