--- a/src/html/parts/page-nav.html
+++ b/src/html/parts/page-nav.html
@@ -3,6 +3,18 @@
       Logo
   </li>
   <li class="panel">
+    <a href='#' data-toggle="collapse" data-target="#collapse-0" data-parent="#side-menu">
+      <i class='fa fa-user'></i>
+      <span class='nav-label'>End Customer</span>
+      <i class='fa fa fa-angle-left'></i>
+    </a>
+    <ul id="collapse-0" class='nav nav-second-level collapse'>
+      <li>
+        <a href='../customer/edit-profile.html'>Edit Profile</a>
+      </li>
+    </ul>
+  </li>
+  <li class="panel">
     <a href='#' data-toggle="collapse" data-target="#collapse-1" data-parent="#side-menu">
       <i class='fa fa-user'></i>
       <span class='nav-label'>Distributor</span>
